#1207 -- add forbidden-apis (#1208)
* Add forbidden-apis -- this just adds the plugin. I'll update the repo to pass it in follow-on commits. This is just a WIP.

* Add forbidden-apis -- stormcrawler-core

* Add forbidden-apis -- rest of the project