@@ -49,7 +49,7 @@ public class PerSecondReducer implements IReducer<TimeReducerState> {
         double msec = System.currentTimeMillis() - accumulator.started;
         if (msec == 0) return 0;
         double permsec = accumulator.sum / msec;
-        return new Double(permsec * 1000d);
+        return Double.valueOf(permsec * 1000d);
     }
 }
 
